src/objects/ICG_Account_Role_Detail_Certification__c.object
<CustomObject>
    <description>Certifications assigned to facilities.</description>
    <fields>
        <fullName>CEIV_Scope__c</fullName>
        <label>CEIV Scope</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Cargo Handling</fullName>
                </value>
                <value>
                    <fullName>Ramp Handling</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Certification__c</fullName>
        <label>Certification</label>
        <referenceTo>ICG_Certification__c</referenceTo>
        <relationshipLabel>ICG Account Role Detail Certifications</relationshipLabel>
        <relationshipName>ICG_Account_Role_Detail_Certifications</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Expiration_Date__c</fullName>
        <label>Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ICG_Account_Role_Detail__c</fullName>
        <label>ICG Account Role Detail</label>
        <referenceTo>ICG_Account_Role_Detail__c</referenceTo>
        <relationshipLabel>ICG Account Role Detail Certifications</relationshipLabel>
        <relationshipName>ICG_Account_Role_Detail_Certifications</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Issuing_Date__c</fullName>
        <label>Issuing Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Name__c</fullName>
        <label>Name</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SFOC_Scope__c</fullName>
        <label>SFOC Scope</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>General Cargo</fullName>
                </value>
                <value>
                    <fullName>Dangerous Goods</fullName>
                </value>
                <value>
                    <fullName>Live Animals</fullName>
                </value>
                <value>
                    <fullName>Pharmaceuticals</fullName>
                </value>
                <value>
                    <fullName>Perishables</fullName>
                </value>
                <value>
                    <fullName>Airmai</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>StatusStatus__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Expired</fullName>
                </value>
                <value>
                    <fullName>Booked</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>ICG Account Role Detail Certification</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>ICG Account Role Detail Certification Na</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>ICG Account Role Detail Certifications</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>